--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "vue": "^2.5.11",
+    "vue-quick-menu": "^1.0.7",
     "vue-router": "^3.1.3",
+    "vue-sidebar-menu": "^4.4.7",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.1.2"
   },
   "browserslist": [
